kubernetes/apps/kube-system/cilium/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - hubble.${domain}
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-ui-authz
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-ui

  extAuth:
    failOpen: false

    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto

    http:
      backendRefs:
        - name: authelia
          namespace: auth
          port: 80

      path: /api/authz/ext-authz/

      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
